--- a/cardio.ipynb
+++ b/cardio.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Cardiovascular Disease Classification \n",
     "\n",
-    "Last Edited: 27/4/2020\n",
+    "Last Edited: 07/5/2020\n",
     "Author: Shi Jianrong\n"
    ]
   },
@@ -18,7 +18,7 @@
     "\n",
     "Cardiovascular disease (CVD) is a class of diseases that involve the heart or blood vessels. It is the leading cause of death in all over the world except in Africa. Some of the common CVD include hypertensive heart disease, stroke, angina, arrhythmia and heart failure.\n",
     "\n",
-    "According to the World Health Organisation (WHO), it takes an estimated 17.9 million lives each year, accounting for 31% of total death worldwide. For patients with existing CVD conditions and symptoms, if proper treatment and intervention are administered, it is estimated that 75% of CVD deaths are preventable. Throughout the years, a large number of research are done in the area of risk factors that affects the chances of getting CVD. Some of the common risk factors identified are genetics, age, gender, tobacco use, alcohol use, physical activities, diet, sleep and stress.\n",
+    "According to the World Health Organisation (WHO), it takes an estimated 17.9 million lives each year, accounting for 31% of total death worldwide. It is estimated that 75% of CVD deaths are preventable if proper treatment and intervention are administered to patients with existing CVD. A large number of researches are done throughout the years in the area of risk factors that affects the chances of getting CVD. Some of the common risk factors identified are genetics, age, gender, tobacco use, alcohol use, physical activities, diet, sleep and stress.\n",
     "\n",
     "For patients who have not been diagnosed of CVD and who are experiencing symptoms of CVD, doctors will usually evaluate his/her risk based on individual risk factors. Further diagnosis can then be performed ,in the forms of electrocardiogram (ECG), exercise stress tests, echocardiogram, coronary angiography, magnetic resonance imaging (MRI) and computerised tomography (CT), depending on the suspected disease. \n",
     "\n",
@@ -33,7 +33,7 @@
    "source": [
     "## Data Source\n",
     "\n",
-    "The data was obtained from Kaggle, a subsidary under Alphabet Inc. It is an online community for data scientists and ML practitioners. Kaggle allows users to explore the datasets that are uploaded by other users and develop models based on the datasets. This particular dataset is published by Svetlana Ulianova, a data analyst working at TELUS Health, based in Canada. The publisher stated that all the data is collected on the moment of medical examination but the exact source of the data is not known. "
+    "The data was obtained from Kaggle, a subsidary under Alphabet Inc. It is an online community for data scientists and ML practitioners. Kaggle allows users to explore the datasets that are uploaded by other users and develop models based on the datasets. This particular dataset is published by Svetlana Ulianova, a data analyst working at TELUS Health, based in Canada. The publisher states that all the data are collected on the moment of medical examination but the exact source of the data is not known. "
    ]
   },
   {
@@ -42,21 +42,25 @@
    "source": [
     "## Methodology\n",
     "\n",
-    "Python will be used here to conduct exploratory data analysis (EDA), as well as to do predictive analysis. Python is chosen due to the ease of use and wide variety of libraries that can be leveraged on. A library is a piece of code that can perform certain actions that has already been written by external sources. This means that as data scientists, we do not have to develop our own code from scratch every time we do data analysis. As ML usually leverage on constant data processing, Python is the ideal general purpose programming language that we can use, allowing us to manipulate and transform data with ease using the wide array of libraries.\n",
+    "Python will be used here to conduct exploratory data analysis (EDA), as well as to do predictive analysis. Python is chosen due to the ease of use and wide variety of libraries that can be leveraged on. A library is a piece of code that can perform certain actions that has already been written by external sources. This means that as data scientists, we do not have to develop our own code from scratch every time we perform data analysis. As ML usually leverage on constant data processing, Python is the ideal general purpose programming language that we can use, allowing us to manipulate and transform data with ease using the wide array of libraries.\n",
     "\n",
     "Here is a table for some of the libraries that are used.\n",
     "\n",
     "| Library | Python Library Name  | Purpose |\n",
     "|:---:|:---:|:---:|\n",
     "| Scikit-learn | sklearn | Wide variety of ML algorithms, both classification and regression problems |\n",
-    "| Pandas | pandas | Reading and writing of csv file, data manipulation, operations such as merging and joining of files |\n"
+    "| Pandas | pandas | Reading and writing of csv file, data manipulation, operations such as merging and joining of files |\n",
+    "| Numpy | numpy | Methods for scientific computing and ease of data manipulation using additional data objects, e.g. arrays |\n",
+    "| Matplotlib | matplotlib | Plotting of static graphs and charts for visualisation |\n",
+    "| Seaborn | seaborn | Built on top of matplotlib to make graphs and charts more elegant, purely for aesthetic purposes |"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploratory Data Analysis"
+    "## Exploratory Data Analysis\n",
+    "\n"
    ]
   }
  ],
